--- a/mini project.html
+++ b/mini project.html
@@ -100,7 +100,7 @@
 
     <h1>HÌNH ẢNH VỀ CÁC KHÓA HỌC</h1>
     <img src = "images/html_css.jpg"/>
-    <p><em><ins><strong>Khóa học lập trình web </strong> </ins></em> :Khóa học giúp bạn phát triển website từ cơ bản đến nâng cao.</p>
+    <p><em><ins><strong>Khóa học lập trình web </strong></ins></em> :Khóa học giúp bạn phát triển website từ cơ bản đến nâng cao.</p>
     <img src = "./images/python.png"/>
     <p><em><ins><strong>Khóa học lập trình Python </strong></ins></em> : Là khóa học giúp bạn xây dựng các ứng dụng phần mềm với ngôn ngữ Python.</p>
     <br>
@@ -109,7 +109,7 @@
     <form action = "#" method = "post">
         <table cellpadding = "10" cellspacing = "0">
         <tr>
-            <td><b>Họ và tên : </b>
+            <td><strong>Họ và tên : </strong>
             </td>
             <td>
                 <input type = "text" id = "name" name = "name"/>
@@ -117,21 +117,21 @@
         </tr>
 
         <tr>
-            <td><b>Email :</b></td>
+            <td><strong>Email :</strong></td>
             <td>
                 <input type = "email" id="email" name = "email"/>
             </td>
         </tr>
 
         <tr>
-            <td><b>Số điện thoại : </b></td>
+            <td><strong>Số điện thoại : </strong></td>
             <td>
                 <input type = "tel" id = "phonenum" name = "phonenum"/>
             </td>
         </tr>
 
         <tr>
-            <td><b>Chọn khóa học : </b></td>
+            <td><strong>Chọn khóa học : </strong></td>
             <td>
                 <select name = "course">
                     <option value = "Web">Khóa học lập trình Web - 3.500.000</option>
@@ -144,14 +144,13 @@
         </tr>
 
         <tr>
-            <td><b>Số người : </b></td>
-            <td>
+            <td><strong>Số người : </strong></td>
                 <input type = "number" id = "people" name = "people" min = "1"/>
             </td>
         </tr>
 
         <tr>
-            <td><b>Ngày bắt đầu :</b></td>
+            <td><strong>Ngày bắt đầu :</strong></td>
             <td>
                 <input type = "date" id = "date" name = "date"/>
             </td>
@@ -167,12 +166,14 @@
         <tr>
             <td>
                 <input type = "submit" value = "GỬI ĐĂNG KÝ KHÓA HỌC"/>
-                <input type = "submit" value = "Nhập lại"/>
+                <input type = "reset" value = "Nhập lại"/>
             </td>
         </tr>
     </table>
     </form>
-    <hr width = "100%">
+
+    <hr>
+
     <p><strong>Liên hệ :</strong>  info@sinhvienviet.vn |Hotline: 1900 5678 Địa chỉ: 456 Đường XYZ, Quận 3, TP.HCM</p>
 </body>
 </html>
