Refactor HTML structure for better clarity
The HTML structure has been updated to improve content clarity and formatting.

--- a/mini project.html
+++ b/mini project.html
@@ -10,7 +10,7 @@
     <h3><em>Chắp cánh ước mơ - Vững bước tương lai</em></h3>
     <hr width = "100%">
     <h2>DANH SÁCH CÁC KHÓA HỌC NỔI BẬT DÀNH CHO SINH VIÊN</h2>
-    <h4>Chào mừng các bạn sinh viên đến với chương trình đào tạo của chúng tôi. Các khóa học của chúng tôi được thiết kế để giúp bạn phát triển toàn diện các kỹ năng cần thiết cho công việc và cuộc sống. Dưới đây là những khóa học nổi bật mà chúng tôi cung cấp:</h4>
+    <p><strong>Chào mừng các bạn sinh viên đến với chương trình đào tạo của chúng tôi. Các khóa học của chúng tôi được thiết kế để giúp bạn phát triển toàn diện các kỹ năng cần thiết cho công việc và cuộc sống. Dưới đây là những khóa học nổi bật mà chúng tôi cung cấp:</strong></p>
     <table border = "1" cellspacing = "0" cellpadding="10">
         <tr>
             <th>Tên khóa học </th>
